Fixing Steam Deck display type indicators not properly aligning with the text

--- a/rest/gaugin_styles/style/steam-deck.css
+++ b/rest/gaugin_styles/style/steam-deck.css
@@ -15,6 +15,10 @@ ul {
             flex-wrap: nowrap;
         }
 
+        & fspan.svg {
+            line-height: 0;
+        }
+
         & svg {
             width: var(--s-n);
             height: var(--s-n);
